demo/gcp/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: atom-intents-ingress
  namespace: atom-intents
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "atom-intents-demo-ip"
    networking.gke.io/managed-certificates: "atom-intents-cert"
    networking.gke.io/v1beta1.FrontendConfig: "atom-intents-frontend"
spec:
  rules:
    - host: atom-intents.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: go-fast
                port:
                  number: 8080
          - path: /ws
            pathType: Exact
            backend:
              service:
                name: go-fast
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-ui
                port:
                  number: 80
